--- a/app/src/main/res/layout/activity_create_project.xml
+++ b/app/src/main/res/layout/activity_create_project.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:focusable="true" android:focusableInTouchMode="true"
-    tools:context="denver.srprojectapp.CreateProjectActivity">
+    tools:context="denver.srprojectapp.activitys.CreateProjectActivity">
 
 
     <ProgressBar android:id="@+id/save_project_progress"
