--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="denver.srprojectapp.RegistrationActivity">
+    tools:context="denver.srprojectapp.activitys.RegistrationActivity">
 
     <!-- Login progress -->
     <ProgressBar android:id="@+id/registration_progress" style="?android:attr/progressBarStyleLarge"
