--- a/app/src/main/res/layout/activity_user_task.xml
+++ b/app/src/main/res/layout/activity_user_task.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="denver.srprojectapp.UserTaskActivity">
+    tools:context="denver.srprojectapp.activitys.UserTaskActivity">
 
     <ProgressBar android:id="@+id/change_task_status_progress"
         style="?android:attr/progressBarStyleLarge"
